Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-12-20 (SVN):
    * cvar.h: Changed the cvar flags to bit shifts for easier maintaining.
      Added CVAR_CHANGED as a new flag.
    * cvar.c (Cvar_Set): Set the CVAR_CHANGED flag when changing a value,
      code elsewhere may make a use of it.

2011-12-20 (SVN):
    * Miscellaneous hexenworld server code cleanups:
    * sv_send.c (SV_FlushRedirect): Adjusted pointer.
    * sv_send.c (CON_Printf): Replaced strcat by q_strlcat.
    * sv_main.c (SVC_Log, SVC_RemoteCommand): Replaced strcat by q_strlcat.
    * sv_main.c (SV_SendBan, Master_Shutdown): Removed assignments and
      strcpy and made the data preinitialized and static.
    * sv_main.c (Master_Heartbeat): Reduced text buffer size from 2048 to
      32 which is more than enough. Replaced sprintf by q_snprintf.

2011-12-20 (SVN):
    * screen.c, gl_screen.c (SCR_DrawCenterString, Bottom_Plaque_Draw,
      Info_Plaque_Draw, Plaque_Draw): Adjusted the y coordinate by adding
      ((vid.height-200)>>1) and replaced all occurences of M_Print2() by
      M_Print() and M_DrawTextBox2() by M_DrawTextBox().
    * menu.c: Removed M_DrawTextBox2, M_Print2 and M_DrawCharacter2().
    * menu.h: Removed prototypes for M_DrawTextBox2() and M_Print2().
      Removed m_activenet, MNET_IPX and MNET_TCP which had never existed.

2011-12-20 (SVN):
    * gl_screen.c (SCR_ScreenShot_f): Calculate the buffer size only once.
    * screen.c (WritePCXfile): Changed to return int, -1 on error and 0 on
      success. Made SCR_ScreenShot_f to print its message only on success.

2011-12-20 (SVN):
    * screen.c, gl_screen.c (SCR_DrawCenterString, Bottom_Plaque_Draw,
      Info_Plaque_Draw, Plaque_Draw): Store the (EndC[i]-StartC[i]) result
      in an extra variable.

2011-12-20 (SVN):
    * screen.c, gl_screen.c (UpdateInfoMessage): Changed newmessage to be
      const. Replaced strcat by q_strlcpy to be on the safe side.

2011-12-20 (SVN):